# sqdlist

./: conanfile.py  meson.build  readme.md
lib/: list.c  list.h  meson.build
test/: meson.build  test.c  test_runner.c
